0.13.2.AE (Pre-Release):
-----------------------
- Fixes Manual Stanza Handling
  * Linux and "Firmware Reboot" stanzas were not handled properly
- Fixes HiddenItem Handling
  * Hidden items could not be created or managed
- Improves Upstream Logging Format
  * Formatted for clarity
- Improves Handling of Manual Stanza Icons
  * Optimises search for associated icons to speed loading times up
  * Only undertakes a second search scan when required
- Improves Selection Image Handling
  * Only calls scaling function when required
- Updates Default Banner Background Colour
  * Now set at 191,191,191 RGB to better match the default grey
- Improves Embedded Image Creation Script
  * Previously updated for Python 3
  * Now updated to be run from any directory
- Aligns Driver and Tools Folders with Upstream
  * Drops '{ARCH}_drivers' and '{ARCH}_tools' Folders for upstream consistency
- Changes Token Name for Internal Consistency
  * 'suppress_verbose_apfs' to 'silence_apfs'



0.13.2.AD (04 May 2021):
-----------------------
- Fixes Memory Management Issues
  * Misc issues mainly introduced in v0.13.2.AA
  * Passes 'MyFreePool' pointer params by reference to ensure they can be set to a NULL value
- Fixes HiddenLegacy Handling
  * HiddenLegacy tags were not being handled when scanning for bootloaders
  * This bug was introduced in v0.13.2.AA (Commit bda56bf8)
- Fixes "DisplaySimpleMessage"
  * Messages were not actually being displayed
  * This bug was introduced in v0.13.2.AA (Commit 183e83e)
- Fixes *.icns Transparency
  * The Alpha Channel was defaulting to opaque black
  * This bug was introduced in v0.13.2.AA (Commit de49af5)
- Improves Upstream Logging Format and Coverage
  * Formatted for better readability and incorporates more key items from the native format
- Improves "ReloadGOP" Implementation
  * Generally updated and optimised
- Improves Volume Type Identification
  * Optical disc drives identified and assumption for network volumes