@@ -257,8 +257,8 @@ EFI_STATUS EFIAPI gRTSetVariableEx (
     IN  CHAR16    *VariableName,
     IN  EFI_GUID  *VendorGuid,
     IN  UINT32     Attributes,
-    IN  UINTN      DataSize,
-    IN  VOID      *Data
+    IN  UINTN      VariableSize,
+    IN  VOID      *VariableData
 ) {
     EFI_STATUS   Status                 = EFI_SECURITY_VIOLATION;
     EFI_GUID     WinGuid                = MICROSOFT_VENDOR_GUID;
@@ -273,6 +273,11 @@ EFI_STATUS EFIAPI gRTSetVariableEx (
     EFI_GUID     RSA2048Sha1Guid        = EFI_CERT_RSA2048_SHA1_GUID;
     EFI_GUID     RSA2048Sha256Guid      = EFI_CERT_RSA2048_SHA256_GUID;
     EFI_GUID     TypeRSA2048Sha256Guid  = EFI_CERT_TYPE_RSA2048_SHA256_GUID;
+    UINT32       StorageFlags;
+
+    #if REFIT_DEBUG > 0
+    CHAR16 *MsgStr = NULL;
+    #endif
 
     BOOLEAN BlockCert = (
         (GuidsAreEqual (VendorGuid, &WinGuid) ||
@@ -295,20 +300,32 @@ EFI_STATUS EFIAPI gRTSetVariableEx (
     );
 
     if (!BlockCert && !BlockPRNG) {
-        Status = EfivarSetRaw (
-            VendorGuid,
+        StorageFlags  = EFI_VARIABLE_BOOTSERVICE_ACCESS;
+        StorageFlags |= EFI_VARIABLE_RUNTIME_ACCESS;
+        StorageFlags |= EFI_VARIABLE_NON_VOLATILE;
+        Status = AltSetVariable (
             VariableName,
-            (CHAR8 *) &Data,
-            DataSize,
-            TRUE
+            VendorGuid,
+            StorageFlags,
+            VariableSize,
+            (CHAR8 *) &VariableData
         );
     }
 
+
     #if REFIT_DEBUG > 0
-    MsgLog ("INFO: Write to NVRAM:- '%s' ... %r", VariableName, Status);
+    MsgStr = PoolPrint (L"Filtered Write to NVRAM:- '%s' ... %r", VariableName, Status);
+    LOG(3, LOG_LINE_NORMAL, L"%s", MsgStr);
+    MsgLog ("INFO: %s", MsgStr);
+    MyFreePool (&MsgStr);
+
     if (BlockCert || BlockPRNG) {
+        MsgStr = StrDuplicate (L"Prevented Microsoft Secure Boot NVRAM Write Attempt");
+        LOG(3, LOG_THREE_STAR_MID, L"%s", MsgStr);
         MsgLog ("\n");
-        MsgLog ("      * Prevented Microsoft Secure Boot NVRAM Write Attempt");
+        MsgLog ("      * %s", MsgStr);
+        MyFreePool (&MsgStr);
+
         MsgLog ("\n");
         MsgLog ("        Successful NVRAM Write May Result in BootROM Damage");
     }
